gf_landing_page CSS fixes (small mis-alignments fixed, features images/posts moved slightly to the left, etc.)

--- a/web/src/gf_apps/gf_landing_page/css/gf_landing_page.css
+++ b/web/src/gf_apps/gf_landing_page/css/gf_landing_page.css
@@ -37,7 +37,7 @@ body {
 
 #right_section {
 	position: relative;
-	left    : 40%;
+	left    : 35%;
 }
 
 @media (max-width: 600px) {
