--- a/web/src/gf_apps/gf_landing_page/css/images.css
+++ b/web/src/gf_apps/gf_landing_page/css/images.css
@@ -65,9 +65,9 @@
 	padding-bottom  : 6px;
 	margin-bottom   : 10px;
 
-	border      : solid;
+	/*border      : solid;
 	border-color: white;
-	border-width: 1px;
+	border-width: 1px;*/
 	position    : relative;
 }
 
@@ -105,7 +105,7 @@
 	padding-right   : 4px;
 
 	font-size : 11px;
-	width     : 206px;
+	/*width     : 206px;*/
 	text-align: center;
 	word-wrap : break-word; /*make all text display even if really long string*/
 	color     : rgb(255,255,255);
@@ -125,7 +125,7 @@
     background-color: #669ab3;
     width           : 197px;
     padding-left    : 9px;
-    padding-right   : 11px;
+    padding-right   : 10px;
 }
 #images .image_info .origin_page_url a {
 	font-size      : 12px;
