--- a/web/src/gf_apps/gf_landing_page/css/posts.css
+++ b/web/src/gf_apps/gf_landing_page/css/posts.css
@@ -44,9 +44,9 @@
 	padding-bottom  : 10px;
 	margin-bottom   : 10px;
 
-	border      : solid;
+	/*border      : solid;
 	border-color: white;
-	border-width: 1px;
+	border-width: 1px;*/
 }
 
 #posts .post_info:hover {
@@ -87,7 +87,7 @@
 	padding-left    : 5px;
 	padding-top     : 6px;
 	padding-bottom  : 6px;
-	padding-right   : 4px;
+	padding-right   : 5px;
 
 	width     : 206px;
 	text-align: center;
